get rid of getFirst